KSENROLL-111764: Fixing spacing between header title and reg button in mobile view of Reg Cart.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@65071 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-enroll-ui/src/main/angular/reg-cart/app/styles/less/main.less
+++ b/ks-enroll-ui/src/main/angular/reg-cart/app/styles/less/main.less
@@ -169,6 +169,12 @@ body {
   padding-left: 0.1em;
 }
 
+@media all and (max-width: 360px) and (min-width: 200px) {
+    .kscr-cart-header-title{
+    font-size: 1.6em;
+    }
+}
+
 .kscr-cart-course {
     background-color: @grayLighter;
     margin: 10px;
